# agent_framework

./: .gitignore  main.py  pyproject.toml
English_Agent/: .env  .env.example  FIX_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  README_LangGraph.md  REFACTOR_SUMMARY.md  TEST_GUIDE.md  agno_introduction.md  comprehensive_test.json  debug_test.py  demo_langgraph.py  embedders.py  englishAgent.py  example.py  history.json  main_api.py  multi_agent.py  new_EnglishAgent.py  prompt_iteration_log.md  prompts_analysis.md  quick_demo.py  quick_test.py  quick_verify.py  result_1.json  result_2.json  result_3.json  result_4.json  result_5.json  result_6.json  result_7.json  result_8.json  run_tests.py  simple_test.py  test.json  test_comprehensive.py  test_corrected.json  test_corrected_claude.json  test_key_cases.py  test_log.md  (+5 more)
English_Agent/frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
English_Agent/tmp/: agent.db
game_agent/: AGENT_SYSTEM_ANALYSIS.md  AGENT_SYSTEM_DESIGN.md  FRONTEND_DESIGN.md  GAME_LOGIC_ANALYSIS.md  LOG_README.md  PLAN.md  README.md  __init__.py  agent_analysis.md  agent_system.py  api_log.md  debug_critical.py  game_logic.py  logging_config.py  main.py  prompts.py  question.md  quick_test.py  requirements.txt  test_fix.py  test_log.md  utils.py  角色切换bug修复报告.md  角色切换bug分析.md
game_agent/my-app/: CARD_PARSING_FIX.md  (+6 more)
learn_langgraph/: Agent_bolt.py  Graph3.ipynb  Graph4.ipynb  Graph5_looping.ipynb  Multiple_inputs.ipynb  RAG_Agent.py  ReactAgent.py  async_c.py  chat_history.json  chat_history.txt  hello.ipynb  simply_1.ipynb
(+35 files in other folders)
