[project]
name = "agent-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.5.10",
    "anthropic>=0.54.0",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.4",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "lancedb>=0.23.0",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain[openai]>=0.3.25",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.8",
    "langsmith>=0.3.45",
    "markdown>=3.8",
    "mcp>=1.9.3",
    "numpy>=2.3.0",
    "openai>=1.84.0",
    "pandas>=2.3.0",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pydantic>=2.11.5",
    "pylance>=0.29.0",
    "ruff>=0.12.0",
    "sqlalchemy>=2.0.41",
    "tantivy>=0.24.0",
    "unstructured>=0.17.2",
    "yfinance>=0.2.63",
]
